@@ -1,12 +1,16 @@
 package bbs.core;
 
+import com.fasterxml.jackson.annotation.JsonAlias;
 import com.fasterxml.jackson.annotation.JsonIgnore;
+import com.fasterxml.jackson.annotation.JsonProperty;
 
 import javax.xml.bind.DatatypeConverter;
+import java.nio.charset.StandardCharsets;
 import java.security.InvalidKeyException;
 import java.security.NoSuchAlgorithmException;
 import java.security.SignatureException;
 import java.time.ZonedDateTime;
+import java.util.Base64;
 import java.util.Calendar;
 import java.util.Date;
 
@@ -24,7 +28,7 @@ public class Message {
         return false;
       }
       // The userId assigned is the same as the given user
-      if (!user.getId().equals(this.userId)) {
+      if (!user.getStringId().equals(this.userId)) {
         return false;
       }
       return user.verifySignature(this);
@@ -40,14 +44,28 @@ public class Message {
     }
   }
 
+  @JsonProperty("signature")
   // Get the signature in hex string format
-  public String getSignature() {
-    return DatatypeConverter.printHexBinary(this.signature).toLowerCase();
+  public String getStringSignature() {
+    return Base64.getEncoder().encodeToString(this.signature);
   }
 
+  @JsonIgnore
+  // Get the signature in hex string format
+  public byte[] getByteSignature() {
+    return this.signature;
+  }
+
+
+  @JsonProperty("signature")
   // Set the signature to byte array from hex string
   public void setSignature(String signature) {
-    this.signature = DatatypeConverter.parseHexBinary(signature);
+    this.signature = Base64.getDecoder().decode(signature.getBytes(StandardCharsets.UTF_8));
+  }
+
+  @JsonIgnore
+  public void setSignature(byte[] signature) {
+    this.signature = signature;
   }
 
   public void setBody(String body) {
@@ -66,17 +84,35 @@ public class Message {
     return this.userId;
   }
 
+  @JsonProperty("creationDate")
   public String getCreationDate() {
     return this.creationDate.toString();
   }
 
+  @JsonProperty("creationDate")
   public void setCreationDate(String creationDate) {
     ZonedDateTime date = ZonedDateTime.parse(creationDate);
     this.creationDate = date;
   }
 
+  public void setCreationDate(ZonedDateTime creationDate) {
+    this.creationDate = creationDate;
+  }
+
+  @JsonIgnore
+  // Utility method to output a byte[] with info from the message to sign
+  public byte[] getContentToSign() {
+    // For now we look at the body and the message creation date
+    String toSign = this.getCreationDate() + this.getBody();
+    return toSign.getBytes(StandardCharsets.UTF_8);
+  }
+
   @Override
   public String toString() {
-    return "Message\nsign: " + this.getSignature() + "\nuserId: " + this.getUserId() + "\nbody: " + this.getBody();
+    return "\n== Message ==\n"+
+        "Signature: " + this.getStringSignature() + "\n" +
+        "UserId: " + this.getUserId() + "\n" +
+        "CreationDate: " + this.getCreationDate() + "\n" +
+        "Body: " + this.getBody();
   }
 }
